# ProjLenaky

./: CMakeLists.txt
basic/: CMakeLists.txt  basic.cpp
ffmpeg/: ffmpeg.sln  ffmpeg.vcxproj  ffmpegdef.h  ffmpegenc.cpp  ffmpegenc.h  ffmpegutil.cpp  ffmpegutil.h  ffmpegwrap.h  main.cpp
ffmpeg/win/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
ffmpeg_hls_segment/: build.sh  hlssegment.cpp
ffmpeg_rtsp_recv_dump/: rtsprecv.cpp
zmq_tutorial/: CMakeLists.txt  README.md  zmq_pub_sub.cpp  zmq_pub_sub_pub_receive.cpp  zmq_pub_sub_sc_switched.cpp  zmq_push_pull.hpp  zmq_push_pull_inquirer.cpp  zmq_push_pull_worker.cpp  zmq_rep_server.cpp  zmq_rep_server_reverse.cpp  zmq_rep_server_twisted.cpp  zmq_rep_server_twisted2.cpp  zmq_req_rep_conclusion.cpp  zmq_req_server.cpp
